--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -307,95 +307,82 @@
       white-space:nowrap;
     }
 
-    /* ✅✅✅ LIVE PRICE TICKER (ADDED ONLY) ✅✅✅ */
-    .priceTicker{
+    /* ============================================================
+      ✅ LIVE FLOW TICKER (NEW) — ONLY ADDITION
+    ============================================================ */
+    .liveTicker{
       margin-top:12px;
       border-radius:18px;
-      border:1px solid rgba(255,255,255,.10);
+      border:1px solid rgba(255,255,255,.12);
       background:rgba(0,0,0,.22);
       box-shadow:0 16px 40px rgba(0,0,0,.35);
       overflow:hidden;
+      backdrop-filter: blur(12px);
     }
-    .priceTickerHead{
-      display:flex;justify-content:space-between;align-items:center;
+    .tickerBar{
+      display:flex;
+      gap:10px;
+      align-items:center;
       padding:10px 12px;
-      border-bottom:1px solid rgba(255,255,255,.08);
+      border-bottom:1px solid rgba(255,255,255,.10);
       font-weight:1000;
-      color:rgba(234,240,255,.78);
-      font-size:13px;
-    }
-    .tickerPulse{
-      display:flex;gap:8px;align-items:center;
-      font-size:12px;font-weight:1000;color:rgba(234,240,255,.70);
+      font-size:12px;
+      color:rgba(234,240,255,.85);
     }
     .tickerDot{
-      width:9px;height:9px;border-radius:999px;background:rgba(34,197,94,1);
+      width:10px;height:10px;border-radius:999px;
+      background:rgba(34,197,94,1);
       box-shadow:0 0 18px rgba(34,197,94,.55);
-      animation:pulse 1.3s ease-in-out infinite;
+    }
+    .tickerViewport{
+      width:100%;
+      overflow:hidden;
+      position:relative;
+      height:48px;
     }
     .tickerTrack{
-      display:flex;
-      gap:14px;
-      padding:12px;
-      overflow:auto;
-      scroll-behavior:smooth;
-      -webkit-overflow-scrolling:touch;
-      scrollbar-width: thin;
-      scrollbar-color: rgba(255,255,255,.18) rgba(0,0,0,0);
-    }
-    .tickerTrack::-webkit-scrollbar{height:8px}
-    .tickerTrack::-webkit-scrollbar-track{background:transparent}
-    .tickerTrack::-webkit-scrollbar-thumb{
-      background:rgba(255,255,255,.16);
-      border-radius:999px;
-      border:2px solid rgba(0,0,0,0);
-      background-clip:padding-box;
-    }
-    .tickerItem{
-      flex:0 0 auto;
-      min-width:170px;
-      border-radius:16px;
-      border:1px solid rgba(255,255,255,.10);
-      background:rgba(255,255,255,.06);
-      padding:10px 10px;
-      display:flex;
+      display:inline-flex;
       align-items:center;
-      justify-content:space-between;
+      white-space:nowrap;
+      gap:26px;
+      padding-left:100%;
+      animation: tickerMove 22s linear infinite;
+      will-change: transform;
+    }
+    @keyframes tickerMove{
+      from{ transform: translateX(0); }
+      to{ transform: translateX(-100%); }
+    }
+    .tickItem{
+      display:inline-flex;
+      align-items:center;
       gap:10px;
-    }
-    .tickerLeft{
-      min-width:0;
-      display:flex;flex-direction:column;gap:3px;
-    }
-    .tickerName{
-      font-weight:1000;
-      white-space:nowrap;
-      overflow:hidden;
-      text-overflow:ellipsis;
-      font-size:13px;
-    }
-    .tickerSymbol{
-      font-weight:900;
-      font-size:11px;
-      color:rgba(234,240,255,.55);
-    }
-    .tickerRight{
-      text-align:right;
-      flex:0 0 auto;
-    }
-    .tickerPrice{
       font-weight:1000;
       font-size:13px;
+      color:rgba(234,240,255,.90);
     }
-    .tickerChg{
-      margin-top:3px;
+    .tickSym{
+      padding:5px 10px;
+      border-radius:999px;
+      border:1px solid rgba(255,255,255,.12);
+      background:rgba(255,255,255,.08);
+      font-size:12px;
       font-weight:1000;
-      font-size:11px;
-      color:rgba(234,240,255,.65);
-      white-space:nowrap;
+      color:#cfefff;
     }
-    .tickerChg.up{color:rgba(34,197,94,1)}
-    .tickerChg.down{color:rgba(248,113,113,1)}
+    .tickPrice{
+      color:#fff;
+    }
+    .tickChg{
+      font-size:12px;
+      font-weight:1000;
+    }
+    .tickUp{color:rgba(34,197,94,1)}
+    .tickDown{color:rgba(248,113,113,1)}
+
+    /* pause ticker when user holds / hovers */
+    .liveTicker:hover .tickerTrack{ animation-play-state: paused; }
+    .liveTicker:active .tickerTrack{ animation-play-state: paused; }
 
     /* ===== BOX ===== */
     .box{
@@ -1159,16 +1146,14 @@
       </div>
     </div>
 
-    <!-- ✅✅✅ LIVE PRICE TICKER (INSERTED UNDER HELLO CARD ONLY) ✅✅✅ -->
-    <div class="priceTicker" id="priceTicker">
-      <div class="priceTickerHead">
-        <span>Live Price Stream</span>
-        <div class="tickerPulse">
-          <span class="tickerDot"></span>
-          <span id="tickerStatus">Connecting…</span>
+    <!-- ✅ LIVE FLOWING TICKER (RIGHT UNDER HELLO CARD) -->
+    <div class="liveTicker" id="liveTicker">
+      <div class="tickerBar"><span class="tickerDot"></span> Live Prices</div>
+      <div class="tickerViewport">
+        <div class="tickerTrack" id="tickerTrack">
+          <div class="tickItem"><span class="tickSym">Loading…</span></div>
         </div>
       </div>
-      <div class="tickerTrack" id="tickerTrack"></div>
     </div>
 
     <div class="balanceCard">
@@ -1368,13 +1353,18 @@
     let top10Timer=null;
 
     /* ============================================================
-      ✅✅✅ LIVE PRICE TICKER (ADDED ONLY)
+      ✅ LIVE FLOWING TICKER (NEW) — ONLY ADDITION
     ============================================================ */
-    const TICKER_IDS = [
-      "bitcoin","ethereum","binancecoin","solana","ripple","cardano",
-      "dogecoin","tron","polkadot","chainlink","litecoin","avalanche-2"
+    const TICKER_COINS = [
+      { id:"bitcoin", sym:"BTC" },
+      { id:"ethereum", sym:"ETH" },
+      { id:"solana", sym:"SOL" },
+      { id:"ripple", sym:"XRP" },
+      { id:"dogecoin", sym:"DOGE" },
+      { id:"cardano", sym:"ADA" },
+      { id:"tron", sym:"TRX" },
+      { id:"binancecoin", sym:"BNB" }
     ];
-    let tickerTimer=null;
 
     function fmtTickerPrice(n){
       const num=Number(n||0);
@@ -1383,45 +1373,43 @@
       return "$" + num.toLocaleString(undefined,{maximumFractionDigits:8});
     }
 
-    async function loadTicker(){
+    async function loadLiveTicker(){
       const track=document.getElementById("tickerTrack");
-      const status=document.getElementById("tickerStatus");
-      if(!track || !status) return;
+      if(!track) return;
 
       try{
-        status.textContent="Live";
-        const url = `https://api.coingecko.com/api/v3/coins/markets?vs_currency=usd&ids=${encodeURIComponent(TICKER_IDS.join(","))}&order=market_cap_desc&per_page=50&page=1&sparkline=false&price_change_percentage=24h`;
-        const res=await fetch(url);
-        const data=await res.json();
-        if(!Array.isArray(data) || !data.length) throw new Error("ticker empty");
+        const ids = TICKER_COINS.map(x=>x.id).join(",");
+        const url = `https://api.coingecko.com/api/v3/coins/markets?vs_currency=usd&ids=${encodeURIComponent(ids)}&order=market_cap_desc&per_page=20&page=1&sparkline=false&price_change_percentage=24h`;
+        const res = await fetch(url);
+        const data = await res.json();
+        if(!Array.isArray(data) || !data.length) throw new Error("no ticker data");
 
-        track.innerHTML = data.map(c=>{
+        // build items
+        const items = data.map(c=>{
+          const sym=(c.symbol||"").toUpperCase();
+          const price=fmtTickerPrice(c.current_price);
           const chg=Number(c.price_change_percentage_24h||0);
-          const cls = chg>=0 ? "up" : "down";
-          const sign = chg>=0 ? "+" : "";
+          const up = chg>=0;
+          const sign = up?"+":"";
           return `
-            <div class="tickerItem">
-              <div class="tickerLeft">
-                <div class="tickerName">${c.name}</div>
-                <div class="tickerSymbol">${String(c.symbol||"").toUpperCase()}</div>
-              </div>
-              <div class="tickerRight">
-                <div class="tickerPrice">${fmtTickerPrice(c.current_price)}</div>
-                <div class="tickerChg ${cls}">${sign}${chg.toFixed(2)}% (24h)</div>
-              </div>
+            <div class="tickItem">
+              <span class="tickSym">${sym}</span>
+              <span class="tickPrice">${price}</span>
+              <span class="tickChg ${up?"tickUp":"tickDown"}">${sign}${chg.toFixed(2)}%</span>
             </div>
           `;
         }).join("");
+
+        // ✅ duplicate content so the scroll is seamless
+        track.innerHTML = items + items;
       }catch(e){
-        status.textContent="Offline";
-        track.innerHTML = `<div class="small" style="padding:12px"><span class="err">Unable to load ticker (network blocked).</span></div>`;
+        track.innerHTML = `<div class="tickItem"><span class="tickSym">Ticker unavailable</span></div>`;
       }
     }
 
-    function startTicker(){
-      if(tickerTimer) clearInterval(tickerTimer);
-      loadTicker();
-      tickerTimer=setInterval(loadTicker, 3000); /* live stream feel */
+    function startTickerAutoRefresh(){
+      loadLiveTicker();
+      setInterval(loadLiveTicker, 15000);
     }
 
     /* ============================================================
@@ -2546,8 +2534,8 @@
       loadRealtimeBadgesOnce();
       subscribeToRealtimeBadges();
 
-      /* ✅ ticker start (only added) */
-      startTicker();
+      // ✅ start live ticker
+      startTickerAutoRefresh();
 
       loadTop10MajorCryptos();
       startTop10AutoRefresh();
