--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -96,9 +96,9 @@
         var(--bg);
     }
 
-    /* ✅ NEW: no card/box — center only */
+    /* ✅ gateCard removed visually (NO BOX / NO BORDERS) */
     .gateCard{
-      width:min(720px,94vw);
+      width:min(520px,92vw);
       border:none;
       background:transparent;
       border-radius:0;
@@ -116,10 +116,9 @@
       display:block;
     }
 
-    /* ✅ NEW: Bigger logo + premium pulse/glow (2x bigger) */
+    /* ✅ gateLogo now BIG + PREMIUM PULSE/GLOW (NO BOX) */
     .gateLogo{
-      width:124px;height:124px;   /* 2x bigger */
-      border-radius:28px;
+      width:140px;height:140px;border-radius:0;
       margin:0 auto 14px;
       display:grid;place-items:center;
       border:none;
@@ -127,47 +126,56 @@
       box-shadow:none;
       overflow:visible;
 
-      animation: gatePulse 2.8s ease-in-out infinite;
-      will-change: transform, filter;
+      animation: premiumPulse 2.4s ease-in-out infinite;
       filter:
-        drop-shadow(0 20px 55px rgba(91,108,255,.35))
-        drop-shadow(0 0 42px rgba(124,77,255,.38))
-        drop-shadow(0 0 65px rgba(56,189,248,.18));
+        drop-shadow(0 18px 45px rgba(0,0,0,.55))
+        drop-shadow(0 0 22px rgba(91,108,255,.30));
     }
 
-    /* Premium glow/pulse */
-    @keyframes gatePulse{
+    /* super premium pulse/glow */
+    @keyframes premiumPulse{
       0%{
         transform: scale(1);
         filter:
-          drop-shadow(0 20px 55px rgba(91,108,255,.28))
-          drop-shadow(0 0 34px rgba(124,77,255,.26))
-          drop-shadow(0 0 52px rgba(56,189,248,.12));
-        opacity:.96;
+          drop-shadow(0 18px 45px rgba(0,0,0,.55))
+          drop-shadow(0 0 14px rgba(91,108,255,.20))
+          drop-shadow(0 0 20px rgba(255,77,166,.14));
+        opacity: .92;
       }
       50%{
         transform: scale(1.06);
         filter:
-          drop-shadow(0 26px 72px rgba(91,108,255,.45))
-          drop-shadow(0 0 58px rgba(124,77,255,.48))
-          drop-shadow(0 0 88px rgba(56,189,248,.22));
-        opacity:1;
+          drop-shadow(0 18px 55px rgba(0,0,0,.60))
+          drop-shadow(0 0 26px rgba(91,108,255,.38))
+          drop-shadow(0 0 34px rgba(56,189,248,.22))
+          drop-shadow(0 0 42px rgba(255,77,166,.22));
+        opacity: 1;
       }
       100%{
         transform: scale(1);
         filter:
-          drop-shadow(0 20px 55px rgba(91,108,255,.28))
-          drop-shadow(0 0 34px rgba(124,77,255,.26))
-          drop-shadow(0 0 52px rgba(56,189,248,.12));
-        opacity:.96;
+          drop-shadow(0 18px 45px rgba(0,0,0,.55))
+          drop-shadow(0 0 14px rgba(91,108,255,.20))
+          drop-shadow(0 0 20px rgba(255,77,166,.14));
+        opacity: .92;
       }
     }
 
-    .gateTxt{font-weight:1000;font-size:18px;letter-spacing:.2px}
-    .gateSub{margin-top:8px;color:rgba(234,240,255,.72);font-weight:900;font-size:13px}
+    /* ✅ TEXT remains, slightly bigger for premium look */
+    .gateTxt{
+      font-weight:1000;
+      font-size:18px;
+      letter-spacing:.2px;
+    }
+    .gateSub{
+      margin-top:8px;
+      color:rgba(234,240,255,.70);
+      font-weight:900;
+      font-size:13px;
+    }
 
-    /* ✅ spinner removed visually (kept class for rest of file safety) */
-    .spinner{display:none;}
+    /* ✅ spinner hidden (requested: only logo + text) */
+    .spinner{display:none}
 
     /* ============================================================
       ✅ STICKY MENU POLISH
@@ -1318,7 +1326,7 @@
       ✅ AUTH GUARD
     ============================================================ */
     const SUPABASE_URL="https://xdcscknfomlzwysczegc.supabase.co";
-    const SUPABASE_ANON_KEY="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InhkY3Nja25mb21send5c2N6ZWdjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc3MTYzMDMsImV4cCI6MjA4MzI5MjM0M30.E6o2wFFMOpK1DghLUqnxG6Ig09djy4bmDQexprhAiB4";
+    const SUPABASE_ANON_KEY="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InhkY3Nja25mb21send5c2N6ZWdjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc3MTYzMDMsImV4cCI6MjA4MzI5MjMwM30.E6o2wFFMOpK1DghLUqnxG6Ig09djy4bmDQexprhAiB4";
     const EDGE_CLEAR_BADGE_URL = `${SUPABASE_URL}/functions/v1/clear_badge`;
     const supabaseClient=supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
@@ -1880,11 +1888,9 @@
       document.body.classList.remove("menuOpen");
     }
 
-    /* ✅ UPDATED: delay hiding gate by +3s */
     function hideGate(){
       const g=document.getElementById("authGate");
-      if(!g) return;
-      setTimeout(()=>{ g.style.display="none"; }, 3000);
+      if(g) g.style.display="none";
     }
 
     function setGreeting(){
@@ -2454,7 +2460,8 @@
 
       document.getElementById("userIdChip").innerText = "ID: " + currentUserId.slice(0,6).toUpperCase();
 
-      hideGate();
+      /* ✅ Loading screen stays 3 seconds longer */
+      setTimeout(()=>hideGate(), 3000);
 
       loadDashboardIdentity();
       loadBalance();
