--- a/login.html
+++ b/login.html
@@ -73,8 +73,17 @@
     background: rgba(255,255,255,0.05);
     border: 1px solid rgba(255,255,255,0.12);
     box-shadow: 0 10px 35px rgba(0,0,0,.40);
+    overflow:hidden;
   }
-  .topIcon svg{ width:32px;height:32px; filter: drop-shadow(0 8px 20px rgba(0,0,0,.50)); }
+
+  /* ✅ logo image (no style change to layout) */
+  .topLogo{
+    width:40px;
+    height:40px;
+    object-fit:contain;
+    filter: drop-shadow(0 8px 20px rgba(0,0,0,.50));
+    display:block;
+  }
 
   h1{
     margin:0;
@@ -201,7 +210,7 @@
   }
   .bottom a:hover{text-decoration:underline;}
 
-  /* ✅ Added: trust/legal links for legitimacy (no style changes elsewhere) */
+  /* ✅ Added: trust/legal links for legitimacy */
   .trust{
     margin-top:18px;
     padding-top:14px;
@@ -240,12 +249,12 @@
   <div class="card">
 
     <div class="topIcon" aria-hidden="true">
-      <svg viewBox="0 0 24 24" fill="none">
-        <path d="M2.2 8.8c5.5-5.1 14.1-5.1 19.6 0" stroke="white" stroke-width="1.8" stroke-linecap="round"/>
-        <path d="M5.3 12c3.8-3.5 9.6-3.5 13.4 0" stroke="white" stroke-width="1.8" stroke-linecap="round"/>
-        <path d="M8.7 15.2c1.8-1.6 4.8-1.6 6.6 0" stroke="white" stroke-width="1.8" stroke-linecap="round"/>
-        <path d="M12 19.5h.01" stroke="white" stroke-width="4" stroke-linecap="round"/>
-      </svg>
+      <img
+        src="assets/vgm-logo.png"
+        alt="Veloci Global Markets"
+        class="topLogo"
+        onerror="this.style.display='none';"
+      />
     </div>
 
     <h1>Login</h1>
@@ -283,7 +292,6 @@
       <a href="signup.html">Sign Up</a>
     </div>
 
-    <!-- ✅ Added: Trust + legal + contact lines to remove phishing signals -->
     <div class="trust">
       Support: <strong>support@veloci-global-markets.online</strong>
       <div class="links">
@@ -376,7 +384,6 @@ async function forgotPassword(){
   setMsg("", "Sending reset email…");
 
   const { error } = await supabaseClient.auth.resetPasswordForEmail(email, {
-    // ✅ more legitimate + correct reset flow
     redirectTo: window.location.origin + "/reset-password.html"
   });
 
