--- a/login.html
+++ b/login.html
@@ -58,20 +58,23 @@
     border:1px solid var(--stroke);
     background: var(--card);
     box-shadow: 0 25px 80px rgba(0,0,0,.50);
-    padding:18px 22px 22px; /* ✅ reduced top padding */
+    padding:10px 22px 22px;   /* ✅ MUCH tighter top padding */
     backdrop-filter: blur(12px);
     -webkit-backdrop-filter: blur(12px);
   }
 
-  /* ✅ Standalone logo (no box) inside card */
+  /* ✅ Standalone logo INSIDE card */
   .logoSolo{
     display:flex;
     justify-content:center;
-    margin:0 auto 6px; /* ✅ reduced gap under logo */
+    margin:0 auto 0px;   /* ✅ remove almost all gap */
+    padding:0;           /* ✅ ensure no padding */
+    line-height:0;       /* ✅ kills phantom spacing */
   }
+
   .logoSolo img{
-    width:300px;                  /* ✅ bigger */
-    max-width:92%;
+    width:320px;                 /* ✅ bigger */
+    max-width:96%;
     height:auto;
     object-fit:contain;
     user-select:none;
@@ -79,31 +82,35 @@
 
     /* ✅ premium glow + pulse */
     filter:
-      drop-shadow(0 26px 60px rgba(0,0,0,.68))
-      drop-shadow(0 0 30px rgba(59,130,246,.30));
+      drop-shadow(0 22px 54px rgba(0,0,0,.66))
+      drop-shadow(0 0 28px rgba(59,130,246,.28));
     animation: logoPulse 2.8s ease-in-out infinite;
     transform-origin:center;
+    margin:0;
+    padding:0;
+    display:block;
   }
 
   @keyframes logoPulse{
     0%, 100%{
       transform: scale(1);
       filter:
-        drop-shadow(0 26px 60px rgba(0,0,0,.68))
-        drop-shadow(0 0 24px rgba(59,130,246,.25));
+        drop-shadow(0 22px 54px rgba(0,0,0,.66))
+        drop-shadow(0 0 22px rgba(59,130,246,.24));
       opacity: .98;
     }
     50%{
       transform: scale(1.03);
       filter:
-        drop-shadow(0 30px 72px rgba(0,0,0,.72))
-        drop-shadow(0 0 44px rgba(59,130,246,.45));
+        drop-shadow(0 26px 66px rgba(0,0,0,.72))
+        drop-shadow(0 0 42px rgba(59,130,246,.42));
       opacity: 1;
     }
   }
 
   h1{
-    margin:0;
+    margin:2px 0 0;      /* ✅ tighten top gap under logo */
+    line-height:1;       /* ✅ reduces vertical whitespace */
     font-size:36px;
     text-align:center;
     font-weight:900;
@@ -116,10 +123,10 @@
 
   .sub{
     text-align:center;
-    margin-top:4px;     /* ✅ reduced */
+    margin-top:4px;
     color: var(--muted);
     font-size:16px;
-    margin-bottom:14px; /* ✅ reduced */
+    margin-bottom:12px;   /* ✅ tighter */
   }
 
   .field{margin-top:14px;}
@@ -227,7 +234,6 @@
   }
   .bottom a:hover{text-decoration:underline;}
 
-  /* ✅ Trust/Legal */
   .trust{
     margin-top:18px;
     padding-top:14px;
@@ -278,7 +284,6 @@
     overflow:hidden;
   }
 
-  /* ✅ Watermark logo glow inside modal */
   .modalWatermark{
     position:absolute;
     inset:0;
@@ -360,9 +365,9 @@
 
   @media(max-width:420px){
     h1{font-size:32px}
-    .card{padding:16px 18px 18px} /* ✅ tighter */
+    .card{padding:8px 18px 18px} /* ✅ even tighter on small screens */
     .bottom{font-size:16px}
-    .logoSolo img{width:270px}
+    .logoSolo img{width:285px}
   }
 </style>
 </head>
@@ -372,7 +377,6 @@
 <div class="wrap">
   <div class="card">
 
-    <!-- ✅ Standalone pulsing/glowing logo INSIDE card -->
     <div class="logoSolo" aria-hidden="true">
       <img
         src="assets/vgm-logo.png"
@@ -432,7 +436,6 @@
   </div>
 </div>
 
-<!-- ✅ Success Modal -->
 <div id="successModal" class="modalOverlay" aria-hidden="true">
   <div class="modal" role="dialog" aria-modal="true" aria-label="Login successful">
 
