--- a/login.html
+++ b/login.html
@@ -70,16 +70,16 @@
     margin:0 auto 2px;
     padding:0;
     line-height:0;
-    height:120px;             /* fixed height so we can crop */
-    overflow:hidden;          /* crop extra empty space */
+    height:120px;
+    overflow:hidden;
   }
 
   .logoSolo img{
     width:340px;
     max-width:98%;
-    height:140px;            /* taller than container = crop effect */
-    object-fit:cover;         /* ✅ trims transparent padding */
-    object-position:center 38%; /* ✅ move logo up/down to remove top gap */
+    height:140px;
+    object-fit:cover;
+    object-position:center 38%;
     user-select:none;
     -webkit-user-drag:none;
 
@@ -109,7 +109,7 @@
   }
 
   h1{
-    margin:0;
+    margin:10px 0 0;     /* ✅ pushed down from logo */
     padding:0;
     line-height:1;
     font-size:36px;
@@ -124,10 +124,10 @@
 
   .sub{
     text-align:center;
-    margin-top:4px;
+    margin-top:8px;       /* ✅ more breathing room */
     color: var(--muted);
     font-size:16px;
-    margin-bottom:12px;
+    margin-bottom:22px;   /* ✅ more space before Email field */
   }
 
   .field{margin-top:14px;}
