--- a/login.html
+++ b/login.html
@@ -63,7 +63,7 @@
     -webkit-backdrop-filter: blur(12px);
   }
 
-  /* ✅ REAL FIX: crop logo transparent padding */
+  /* ✅ Logo crop to remove PNG transparent padding */
   .logoSolo{
     display:flex;
     justify-content:center;
@@ -108,10 +108,11 @@
     }
   }
 
+  /* ✅ FIX: prevent "Login" text from clipping */
   h1{
-    margin:10px 0 0;     /* ✅ pushed down from logo */
-    padding:0;
-    line-height:1;
+    margin:12px 0 0;
+    padding:0 0 2px;       /* ✅ stops cut */
+    line-height:1.15;      /* ✅ stops cut */
     font-size:36px;
     text-align:center;
     font-weight:900;
@@ -124,10 +125,10 @@
 
   .sub{
     text-align:center;
-    margin-top:8px;       /* ✅ more breathing room */
+    margin-top:8px;
     color: var(--muted);
     font-size:16px;
-    margin-bottom:22px;   /* ✅ more space before Email field */
+    margin-bottom:22px;
   }
 
   .field{margin-top:14px;}
@@ -438,6 +439,7 @@
   </div>
 </div>
 
+<!-- ✅ Success Modal -->
 <div id="successModal" class="modalOverlay" aria-hidden="true">
   <div class="modal" role="dialog" aria-modal="true" aria-label="Login successful">
 
