--- a/login.html
+++ b/login.html
@@ -586,7 +586,8 @@ function showSuccessModal(){
 async function signInWithGoogle(){
   setMsg("", "Opening Google sign-in…");
 
-  const redirectTo = window.location.origin + "/login.html";
+  /* ✅ CHANGED: go directly to /session/ after Google login */
+  const redirectTo = window.location.origin + "/session/";
 
   const { error } = await supabaseClient.auth.signInWithOAuth({
     provider: "google",
