--- a/verify.html
+++ b/verify.html
@@ -19,7 +19,6 @@
       --ok:#22c55e;
       --err:#f87171;
     }
-
     *{box-sizing:border-box}
     body{
       margin:0;
@@ -33,7 +32,6 @@
       padding:16px;
       overflow-x:hidden;
     }
-
     body::before{
       content:"";
       position:fixed;
@@ -47,25 +45,22 @@
     }
 
     .wrap{ width:100%; max-width:520px; z-index:1; }
-
     .card{
       width:100%;
       border-radius:18px;
       border:1px solid var(--stroke);
       background: var(--card);
       box-shadow: 0 25px 80px rgba(0,0,0,.50);
-      padding:26px 22px 22px;
+      padding:24px 22px 22px;
       backdrop-filter: blur(12px);
       -webkit-backdrop-filter: blur(12px);
       text-align:center;
     }
 
-    /* ✅ Logo crop to remove PNG transparent padding */
     .logoSolo{
       display:flex;
       justify-content:center;
-      margin:-10px auto 10px;
-      padding:0;
+      margin:-8px auto 10px;
       line-height:0;
       height:110px;
       overflow:hidden;
@@ -82,30 +77,16 @@
         drop-shadow(0 22px 54px rgba(0,0,0,.66))
         drop-shadow(0 0 28px rgba(59,130,246,.28));
       animation: logoPulse 2.8s ease-in-out infinite;
-      transform-origin:center;
       display:block;
     }
-
     @keyframes logoPulse{
-      0%, 100%{
-        transform: scale(1);
-        filter:
-          drop-shadow(0 22px 54px rgba(0,0,0,.66))
-          drop-shadow(0 0 22px rgba(59,130,246,.24));
-        opacity: .98;
-      }
-      50%{
-        transform: scale(1.03);
-        filter:
-          drop-shadow(0 26px 66px rgba(0,0,0,.72))
-          drop-shadow(0 0 42px rgba(59,130,246,.42));
-        opacity: 1;
-      }
+      0%, 100%{ transform: scale(1); opacity:.98; }
+      50%{ transform: scale(1.03); opacity:1; }
     }
 
     h1{
       margin:0;
-      font-size:28px;
+      font-size:30px;
       font-weight:1000;
       letter-spacing:-0.6px;
       background: linear-gradient(90deg, #3b82f6, #6366f1);
@@ -117,133 +98,61 @@
     }
 
     .sub{
-      margin-top:8px;
-      color: rgba(229,231,235,.70);
+      margin-top:10px;
+      color: rgba(229,231,235,.72);
       font-size:14px;
-      line-height:1.6;
+      line-height:1.65;
     }
+
+    .mailBox{
+      margin:14px auto 0;
+      width:100%;
+      border-radius:14px;
+      border:1px solid rgba(255,255,255,0.12);
+      background: rgba(2,6,23,0.35);
+      padding:12px 12px;
+      color:#eaf0ff;
+      font-weight:900;
+      word-break:break-word;
+    }
+
+    .btn{
+      width:100%;
+      border:none;
+      margin-top:18px;
+      padding:14px 14px;
+      font-size:16px;
+      font-weight:1000;
+      border-radius:12px;
+      cursor:pointer;
+      color:#fff;
+      background: linear-gradient(180deg, var(--brand1), var(--brand2));
+      box-shadow: 0 18px 55px rgba(37,99,235,.28);
+      transition:.15s ease;
+    }
+    .btn:hover{transform: translateY(-1px); filter:brightness(1.02);}
 
     .msg{
-      margin-top:16px;
-      font-size:14px;
-      color: var(--muted);
+      margin-top:12px;
+      font-size:13px;
       min-height:18px;
+      color: var(--muted);
     }
-    .msg .ok{ color: var(--ok); font-weight:1000; }
-    .msg .err{ color: var(--err); font-weight:1000; }
+    .msg .ok{color:var(--ok);font-weight:1000}
+    .msg .err{color:var(--err);font-weight:1000}
 
-    /* ✅ Modal */
-    .modalOverlay{
-      position:fixed;
-      inset:0;
-      background: rgba(0,0,0,.55);
-      backdrop-filter: blur(10px);
-      -webkit-backdrop-filter: blur(10px);
-      display:none;
-      align-items:center;
-      justify-content:center;
-      z-index:9999;
-      padding:18px;
+    .smallLinks{
+      margin-top:14px;
+      color: rgba(229,231,235,.65);
+      font-size:13px;
+      line-height:1.6;
     }
-    .modal{
-      width:100%;
-      max-width:420px;
-      border-radius:20px;
-      border:1px solid rgba(255,255,255,0.14);
-      background: rgba(2,6,23,.72);
-      box-shadow: 0 35px 120px rgba(0,0,0,.70);
-      padding:22px 18px 18px;
-      text-align:center;
-      position:relative;
-      overflow:hidden;
-    }
-
-    .modalWatermark{
-      position:absolute;
-      inset:0;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      pointer-events:none;
-      z-index:0;
-    }
-    .modalWatermark img{
-      width:280px;
-      max-width:90%;
-      opacity:0.07;
-      filter: drop-shadow(0 40px 90px rgba(0,0,0,.85));
-      transform: translateY(-6px);
-    }
-    .modal::before{
-      content:"";
-      position:absolute;
-      inset:-40px;
-      background: radial-gradient(circle at 50% 18%, rgba(96,165,250,.24), transparent 62%);
-      filter: blur(16px);
-      opacity:.85;
-      pointer-events:none;
-      z-index:0;
-    }
-
-    .modalTitle{
-      font-size:22px;
+    .smallLinks a{
+      color:#60a5fa;
       font-weight:1000;
-      letter-spacing:-.2px;
-      margin:0;
-      color:#eaf0ff;
-      position:relative;
-      z-index:1;
+      text-decoration:none;
     }
-    .modalSub{
-      margin-top:8px;
-      color: rgba(234,240,255,.72);
-      font-size:14px;
-      font-weight:800;
-      position:relative;
-      z-index:1;
-    }
-
-    .dots{
-      display:inline-flex;
-      gap:4px;
-      margin-left:6px;
-      transform: translateY(1px);
-    }
-    .dot{
-      width:6px;height:6px;
-      border-radius:50%;
-      background: rgba(96,165,250,.95);
-      opacity:.25;
-      animation: blink 1.1s infinite;
-    }
-    .dot:nth-child(2){animation-delay:.18s}
-    .dot:nth-child(3){animation-delay:.36s}
-    @keyframes blink{
-      0%, 100% { opacity:.25; transform: translateY(0px); }
-      45% { opacity:1; transform: translateY(-1px); }
-    }
-
-    .modalGlow{
-      margin:14px auto 0;
-      width:86px;height:86px;
-      border-radius:24px;
-      background: rgba(34,197,94,.10);
-      border:1px solid rgba(34,197,94,.18);
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      box-shadow: 0 15px 55px rgba(34,197,94,.08);
-      position:relative;
-      z-index:1;
-    }
-    .modalGlow svg{width:34px;height:34px; filter: drop-shadow(0 12px 30px rgba(0,0,0,.65));}
-
-    @media(max-width:420px){
-      h1{font-size:26px}
-      .card{padding:22px 18px 18px}
-      .logoSolo{height:104px;margin:-14px auto 10px;}
-      .logoSolo img{width:300px;height:130px}
-    }
+    .smallLinks a:hover{text-decoration:underline;}
   </style>
 </head>
 
@@ -256,38 +165,20 @@
         <img src="assets/vgm-logo.png" alt="Veloci Global Markets" onerror="this.style.display='none';"/>
       </div>
 
-      <h1>Email Verification</h1>
+      <h1>Verify your Email</h1>
       <div class="sub">
-        Please wait while we confirm your email verification.
+        We sent a verification link to your email. Please open your inbox and click the button to verify your account.
       </div>
+
+      <div id="emailBox" class="mailBox" style="display:none;"></div>
+
+      <button class="btn" onclick="resendEmail()">Resend Verification Email</button>
 
       <p id="msg" class="msg"></p>
 
-    </div>
-  </div>
-
-  <!-- ✅ Success Modal -->
-  <div id="successModal" class="modalOverlay" aria-hidden="true">
-    <div class="modal" role="dialog" aria-modal="true" aria-label="Email verified">
-
-      <div class="modalWatermark" aria-hidden="true">
-        <img src="assets/vgm-logo.png" alt="" />
-      </div>
-
-      <div class="modalGlow" aria-hidden="true">
-        <svg viewBox="0 0 24 24" fill="none">
-          <path d="M20 6L9 17l-5-5" stroke="#22c55e" stroke-width="2.6" stroke-linecap="round" stroke-linejoin="round"/>
-        </svg>
-      </div>
-
-      <h2 class="modalTitle">Email Verified Successfully</h2>
-      <div class="modalSub">
-        Redirecting to Secure Session
-        <span class="dots" aria-hidden="true">
-          <span class="dot"></span>
-          <span class="dot"></span>
-          <span class="dot"></span>
-        </span>
+      <div class="smallLinks">
+        After verifying, you can go to <a href="login.html">Login</a><br/>
+        If you didn’t receive it, check Spam/Junk.
       </div>
 
     </div>
@@ -298,7 +189,14 @@
   const SUPABASE_ANON_KEY="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InhkY3Nja25mb21send5c2N6ZWdjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc3MTYzMDMsImV4cCI6MjA4MzI5MjMwM30.E6o2wFFMOpK1DghLUqnxG6Ig09djy4bmDQexprhAiB4";
   const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
-  verifyNow();
+  const params = new URLSearchParams(window.location.search);
+  const email = params.get("email") || "";
+
+  if(email){
+    const box=document.getElementById("emailBox");
+    box.textContent=email;
+    box.style.display="block";
+  }
 
   function setMsg(type, text){
     const msg=document.getElementById("msg");
@@ -307,54 +205,28 @@
     else msg.textContent=text;
   }
 
-  function showSuccessModal(){
-    const modal=document.getElementById("successModal");
-    modal.style.display="flex";
-    modal.setAttribute("aria-hidden","false");
-  }
-
-  async function verifyNow(){
-    try{
-      setMsg("", "Verifying your email…");
-
-      // ✅ Supabase processes verification tokens automatically on page load.
-      // All we need to do is confirm that user session exists & email is confirmed.
-
-      // Wait a bit for Supabase to finalize session from token
-      await new Promise(r => setTimeout(r, 400));
-
-      const { data, error } = await supabaseClient.auth.getSession();
-      if(error){
-        setMsg("err", error.message);
-        return;
-      }
-
-      const session = data?.session;
-      const user = session?.user;
-
-      if(!user){
-        setMsg("err", "Verification link is invalid or expired. Please request a new verification email.");
-        return;
-      }
-
-      if(!user.email_confirmed_at){
-        setMsg("err", "Email not verified yet. Please try again or open the newest verification email.");
-        return;
-      }
-
-      // ✅ VERIFIED
-      setMsg("", "");
-      showSuccessModal();
-
-      // ✅ Redirect into secure session flow (PIN create)
-      setTimeout(()=>{
-        window.location.href="/session/";
-      }, 1300);
-
-    }catch(e){
-      console.error(e);
-      setMsg("err", "Something went wrong. Please reload this page.");
+  async function resendEmail(){
+    if(!email){
+      setMsg("err","Missing email. Please go back to Sign Up and try again.");
+      return;
     }
+
+    setMsg("", "Resending verification email…");
+
+    const redirectTo = window.location.origin + "/verified.html";
+
+    const { error } = await supabaseClient.auth.resend({
+      type: "signup",
+      email: email,
+      options: { emailRedirectTo: redirectTo }
+    });
+
+    if(error){
+      setMsg("err", error.message);
+      return;
+    }
+
+    setMsg("ok","Verification email re-sent ✅ Check your inbox.");
   }
 </script>
 
